<resources>
  <string name="app_name">TestApplication</string>
  <string name="title_activity_maps">Map</string>
  <string name="grant_permission_get_current_location">Grant permission to get current location.</string>
  <string name="place_search_hint">Search Place</string>
  <string name="show_nearby_place_list">Show Nearby Place List</string>
  <string name="photos">Photos</string>
  <string name="open">Open</string>
  <string name="close">close</string>
  <string name="empty"/>

  <string name="title_activity_fullscreen">FullscreenActivity</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>
  <string name="nearby_place">Nearby Place</string>
  <string name="all_contacts">All Contacts</string>
  <string name="contact">Contact</string>
  <string name="all">All</string>
  <string name="search_your_contact">Search your contact</string>
  <string name="emergency_contact">EMERGENCY CONTACT</string>
  <string name="edit">EDIT</string>
  <string name="all_contacts_cap">ALL CONTACTS</string>
  <string name="location">%1$s %2$s</string>
  <string name="contact_not_found">Contacts not found!</string>
  <string name="add_contact">Add Contact</string>
  <string name="favourites">Favourites</string>
  <string name="favourites_cap">FAVOURITES</string>
  <string name="add_emergency_contact">Add Emergency Contact</string>
  <string name="emergency_contact_message">The person should be the one who is most reliable and knows you well.
  </string>
  <string name="max_ten_emergency_contact">Maximum ten contact will be consider as emergency contacts.</string>
</resources>
