<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View"/>

    <variable
        name="viewModel"
        type="com.test.testapplication.main.contacts.addemergencycontact.AddEmergencyContactViewModel"/>

  </data>

  <android.support.constraint.ConstraintLayout
      android:layout_height="match_parent"
      android:layout_width="match_parent"
      android:background="#f5f5f5"
      tools:context=".main.contacts.AllContactsView">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_all_contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:allContacts="@{viewModel.contactList}"
        app:filterContact="@{viewModel.query}"
        app:layout_constraintTop_toBottomOf="@+id/tv_all_contacts"
        tools:listitem="@layout/row_add_emergency_contact"/>
    <TextView
        android:text="@string/all_contacts_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/tv_all_contacts"
        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/rv_favourites_contacts"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>
    <EditText
        android:elevation="2dp"
        android:id="@+id/et_search_contact"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:drawableStart="@drawable/places_ic_search"
        android:hint="@string/search_your_contact"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:drawablePadding="16dp"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:textSize="16sp"
        android:background="@drawable/search_drawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableLeft="@drawable/places_ic_search"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onTextChanged="@{(text, start, before, count) -> viewModel.onSearch(String.valueOf(text))}"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_favourites_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/tv_favourites_contact"
        tools:itemCount="3"
        app:favourites="@{viewModel.contactList}"
        android:layout_marginTop="8dp" tools:listitem="@layout/row_add_emergency_contact"
        android:orientation="horizontal"/>
    <TextView
        android:text="@string/favourites_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/tv_favourites_contact"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_search_contact"/>
    <android.support.constraint.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="@{safeUnbox(viewModel.query.isEmpty()) ? View.VISIBLE : View.GONE}"
        android:id="@+id/group" app:constraint_referenced_ids="rv_favourites_contacts,tv_favourites_contact"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_empty_contacts" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_all_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/contact_not_found"
        android:visibility="@{safeUnbox(viewModel.isEmpty()) ? View.VISIBLE : View.GONE}"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    <TextView
        android:hint="@string/emergency_contact_message"
        android:text="@{safeUnbox(viewModel.isMax()) ? @string/max_ten_emergency_contact : @string/empty}"
        android:textColor="@color/red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/textView4"
        android:background="#ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:gravity="center_vertical|center"/>
  </android.support.constraint.ConstraintLayout>
</layout>